# rust-fixed-decimal

./: Cargo.toml  LICENSE  LICENSE-APACHE  README.md  TODO.md
src/: constants.rs  error.rs  ext_num_traits.rs  fixed_decimal.rs  lib.rs  serde.rs  str.rs
tests/: fixed_decimal.proptest-regressions  fixed_decimal.rs
