[package]
name = "rust-fixed-decimal"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.6"
num-traits = { version = "0.2.19"}
serde = { default-features = false, optional = true, version = "1.0" }

[dev-dependencies]
proptest = { version = "1.5.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[features]
default = []
serde = ["dep:serde"]
